--- a/backend/utils/train_water_model.ipynb
+++ b/backend/utils/train_water_model.ipynb
@@ -3,14 +3,14 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "91909e73",
+   "id": "7eb7d91f",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "✅ Air Pollution Model Trained and Saved!\n"
+      "✅ Water Pollution Model Trained and Saved!\n"
      ]
     }
    ],
@@ -18,29 +18,35 @@
     "import pandas as pd\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
+    "from sklearn.preprocessing import StandardScaler\n",
     "import pickle\n",
     "\n",
     "# Load dataset\n",
-    "data = pd.read_csv('../data/air_data.csv')\n",
+    "data = pd.read_csv('../data/water_data.csv')\n",
     "\n",
-    "# Feature columns and label\n",
-    "features = ['PM2.5', 'PM10', 'NO2']  # Adjust these to match dataset\n",
-    "X = data[features]\n",
-    "y = data['Air Quality']              # e.g., 0 = Good, 1 = Bad\n",
+    "# Handle missing values\n",
+    "data.fillna(data.mean(), inplace=True)\n",
+    "\n",
+    "# Features and label\n",
+    "X = data.drop('Potability', axis=1)\n",
+    "y = data['Potability']\n",
+    "\n",
+    "# Scale data\n",
+    "scaler = StandardScaler()\n",
+    "X_scaled = scaler.fit_transform(X)\n",
     "\n",
     "# Train/test split\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X_scaled, y, test_size=0.2, random_state=42)\n",
     "\n",
     "# Train RandomForest\n",
     "model = RandomForestClassifier(n_estimators=100, random_state=42)\n",
     "model.fit(X_train, y_train)\n",
     "\n",
-    "# Save model\n",
-    "with open('../models/air_model.pkl', 'wb') as f:\n",
-    "    pickle.dump(model, f)\n",
+    "# Save model & scaler\n",
+    "pickle.dump(model, open('../models/water_model.pkl', 'wb'))\n",
+    "pickle.dump(scaler, open('../models/water_scaler.pkl', 'wb'))\n",
     "\n",
-    "print(\"✅ Air Pollution Model Trained and Saved!\")\n",
-    "\n"
+    "print(\"✅ Water Pollution Model Trained and Saved!\")\n"
    ]
   }
  ],
